[package]
name = "raytracer-2d"
version = "0.1.0"
authors = ["xRage"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49"
piston2d-graphics = "0.36"
pistoncore-glutin_window = "0.63"
piston2d-opengl_graphics = "0.72"
cgmath = "0.17"
bitflags = "1.2.1"

[profile.release]
lto = true
codegen-units = 1