[package]
name = "raytracer-2d"
version = "0.1.0"
authors = ["xRage"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.107"
piston2d-graphics = "0.36"
bitflags = "1.2.1"

[profile.release]
lto = true
codegen-units = 1